# rawdog

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  python-publish.yml
examples/: README.md  read_readme_for_instructions.py  update_rawdog_config.py
examples/code/: copy_github_action_script.py  create_hello_script.py  import_in_init.py
examples/csv/: nasdaq_sp_from_csv.py  normalize_sp.py
examples/graphs/: git_contributor_graph.py  nasdaq_price_changes.py  zsh_history.py
examples/media/: remove_sound.py
examples/pic/: greyscale_screenshot.py  mandelbrot.py
examples/repo/: describe_docs_structure.py  describe_github_actions.py  license_question.py  plot_libraries.py  summarize_git_diff_part_1.py  summarize_git_diff_part_2.py
examples/simple/: cat.py  cwd.py  grep.py  ls.py  math.py
examples/system/: id_port_and_kill.py  port_summary.py  volume.py
examples/web/: open_browser.py  wikipedia.py
rawdog/: __main__.py  llm_client.py  prompts.py
scripts/: fine_tune.py  generate_jsonl_from_examples.py
scripts/migrations/: continue_to_task_complete.py  v0.1_to_v0.2.py
src/rawdog/: __main__.py  config.py  execute_script.py  llm_client.py  logging.py  parsing.py  prompts.py  utils.py
