[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rawdog"
version = "0.1.0"
description = "An AI command-line assistant"
readme = "README.md"
dependencies = [
    "litellm>=1.20.5"
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AbanteAI/rawdog"
Issues = "https://github.com/AbanteAI/rawdog/issues"

[project.scripts]
rawdog = "rawdog.__main__:main"
